blackbox/blackbox-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: blackbox
  name: blackbox
spec:
  ports:
    - name: "9115"
      port: 9115
      targetPort: 9115
  selector:
    io.service: blackbox
status:
  loadBalancer: {}
